--- a/Group_14_Analysis.Rmd
+++ b/Group_14_Analysis.Rmd
@@ -3,14 +3,13 @@ title: "Group_14_Analysis"
 output: pdf_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r packages, include=FALSE}
+library(ggplot2)
+library(readr)
+library(dplyr)
+library(tidyverse)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-This is a line from RStudio
+```{r dataset, include=FALSE}
+read.csv("https://raw.githubusercontent.com/martacasero7/DAS-Group-14/main/dataset14.csv")
+```
