--- a/Group_14_Analysis.Rmd
+++ b/Group_14_Analysis.Rmd
@@ -8,8 +8,52 @@ library(ggplot2)
 library(readr)
 library(dplyr)
 library(tidyverse)
+library(moderndive)
+library(gapminder)
+library(sjPlot)
+library(stats)
+library(jtools)
+library(reshape2)    
+library(ggpubr)
 ```
 
 ```{r dataset, include=FALSE}
-read.csv("https://raw.githubusercontent.com/martacasero7/DAS-Group-14/main/dataset14.csv")
+coffee <- read.csv("https://raw.githubusercontent.com/martacasero7/DAS-Group-14/main/dataset14.csv")
+```
+
+```{r summaries}
+summary(coffee)
+
+ggplot(data = coffee, aes(x=country_of_origin, group = Qualityclass)) +
+  geom_bar(aes(y = ..prop.., fill= Qualityclass), stat="count", position="dodge") +
+   scale_fill_manual(values = c("darkseagreen", "indianred")) +
+  labs(x= "Where is the coffee from?", y="Proportion") +
+  ggpubr::rotate_x_text()
+
+coffee$harvested <- as.factor(coffee$harvested)
+ggplot(data = coffee, aes(x=harvested, group = Qualityclass)) +
+  geom_bar(aes(y = ..prop.., fill= Qualityclass), stat="count", position="dodge") +
+  scale_fill_manual(values = c("darkseagreen", "indianred")) +
+  labs(x= "When was the coffee harvested?", y="Proportion") 
+
+#Some data wrangling to get a nice boxplot with aroma, flavor and acidity
+coffee_long <- melt(coffee, id="Qualityclass")
+coffee_qualities <- coffee_long %>% filter(!(variable %in% c("country_of_origin", "category_two_defects", "altitude_mean_meters", "harvested"))) %>% filter(value != "0") 
+coffee_qualities$value <- as.numeric(coffee_qualities$value)
+ggplot(coffee_qualities, aes(x = variable, y=value)) + 
+  geom_boxplot(aes(fill= Qualityclass)) + 
+  scale_fill_manual(values = c("darkseagreen", "indianred")) +
+  labs(x="", y="Grade")
+
+ggplot(coffee, aes(y=category_two_defects)) +
+  geom_boxplot(aes(fill=Qualityclass)) +
+  scale_fill_manual(values = c("darkseagreen", "indianred")) +
+  labs(x="Category two defects", y="Count")
+
+coffee_alt <- coffee %>% drop_na(altitude_mean_meters)
+ggplot(coffee_alt, aes(y=altitude_mean_meters)) +
+  geom_boxplot(aes(fill=Qualityclass), outlier.shape = NA) +
+  coord_cartesian(ylim =  c(0, 2500)) +
+  scale_fill_manual(values = c("darkseagreen", "indianred")) +
+  labs(x="", y="Altitude")
 ```
